fix(web): fix option not showing in IOS

--- a/web/components/Select/Select.module.scss
+++ b/web/components/Select/Select.module.scss
@@ -27,7 +27,7 @@
     border-radius: 4px;
     padding: 3px 0px;
 
-    & > option {
+    & > div {
       padding: 0.3rem 8px;
       cursor: pointer;
       &:hover {
